# dataclass-abc

./: README.md  pyproject.toml  setup.py
.github/workflows/: pyhtontests.yaml  pythonpublish.yml
dataclass_abc/: __init__.py
dataclassabc/: __init__.py  __init__.pyi
example/: capitalcity.py  city.py  main.py
example/impl/: capitalcityimpl.py  cityimpl.py
example/init/: initcapitalcity.py  initcity.py
example/mixins/: citynamemixin.py  countrynamemixin.py  spherepositionmixin.py
examples/: genericclass.py  mutablevariable.py  spherepositionsofcities.py
tests/: test_dataclassabc.py  test_notlosingattributes.py  test_resolveabcprop.py
