[project]
name = "dataclassabc"
version = "0.0.18"
description = 'A Python library that allows you to define abstract properties for dataclasses, bridging the gap between abstract base classes (ABCs) and dataclasses.'
authors = [
  {name="Michael Schneeberger", email="michael.schneeb@hotmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typing_extensions>=4.11.0",
]

[project.urls]
Homepage = "https://github.com/MichaelSchneeberger/dataclass-abc"

[tool.hatch.build.targets.sdist]
include = [
  "dataclassabc/*.py",
  "dataclassabc/py.typed"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
